--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: space-between;   
-   
+    gap: 40px;
 }
 
 main {
@@ -26,7 +26,8 @@ main {
     flex-direction: column;
     align-items: center;
     gap: 10px;
-    justify-content: space-between;
+    justify-content: space-evenly;
+    
 }
 
 .container {
