--- a/css/campeao.css
+++ b/css/campeao.css
@@ -65,7 +65,7 @@
     position: absolute;
     top: 14%;
     left: 12.2%;
-    height: 82%;
+    height: 84%;
     width: 75vw;
     display: initial;
     z-index: 10000;
@@ -73,7 +73,7 @@
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    background: #0a0a0de5;
+    background: #0a0a0d40;
 }
 
 .tela__habilidades {
@@ -109,25 +109,39 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 20px;
+} 
+
+.container__skin__campeao {
+    position: relative;
+    width: 90%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    overflow: hidden;
+
+   
 }
 
 .moldura__splash__campeao {
     position: absolute;
     z-index: 2;
-    height: 76%;
+    height: 85%;
     top: 6%;
 }
 
 .image__splash__campeao {
     position: absolute;
     top: 5%;
-    height: 79%;
+    height: 90%;
     width: 75%;
 }
 
 .moldura__campeao {
     position: relative;
-    top: -50%;
+    top: -60%;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -156,13 +170,14 @@
     top: -12%;
     width: 6.5vw;
     height: 14.7vh;
-    z-index: 1;
+    z-index: 1000;
+    
 }
 
 .titulo__splash__campeao {
     position: absolute;
     z-index: 100;
-    top: 70%;
+    top: 80%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -183,8 +198,8 @@
 }
 
 .icon {
-    position: relative;
-    top: -68%;
+    position: absolute;
+    top: -30%;
     color: #DBBD77;
     background: rgba(29, 29, 35, 0.8);
     border: 1px solid #916E2D;
@@ -206,6 +221,8 @@
 }
 
 .ancora__skin__splash {
+    position: relative;
+    top: -30%;
     height: 80px;
     width: 80px;
     background-color: #15151BCC;
@@ -218,6 +235,8 @@
 }
 
 .ancora__habilidades__splash {
+    position: relative;
+    top: -30%;
     height: 80px;
     width: 80px;
     background-color: #15151BCC;
@@ -239,6 +258,21 @@
     width: 55px;
 }
 
+.tela__habilidades__splash {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 75vw;
+    display: initial;
+    z-index: 10000;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    background: #0a0a0de5;
+}
+
 .testeB {
     position: absolute;
     display: none;
@@ -251,4 +285,254 @@
     width: 100vw;
     height: 100vh;
     display: initial;
+}
+
+.habilidades {
+    height: 60px;
+    width: 60px;
+    background-color: #664C1C;
+    cursor: pointer;
+}
+
+.passiva {
+    height: 60px;
+    width: 60px;
+    background-color: #664C1C;
+    cursor: pointer;
+}
+
+.lista__habilidades {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+}
+
+.container__info__habilidades {
+    height: auto;
+    width: 100%;
+    max-width: 45vw;
+    background: #15151b86;
+    backdrop-filter: blur(2px);
+    border-radius: 20px;
+    color: white;
+    font-family: Kanit;
+    font-size: 20px;
+    font-style: italic;
+    font-weight: 500;
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    padding: 20px;
+    gap: 10px;
+}
+
+.titulo__passiva {
+    color: white;
+    font-size: 1.7rem;
+    font-weight: 700;
+    text-align: left;
+}
+
+.subtitulo__passiva {
+    color: white;
+    font-size: 1rem;
+    font-style: italic;
+    font-weight: 400;
+    text-align: left;
+}
+
+.texto__passiva {
+    font-size: 1.5rem;
+    font-style: italic;
+    font-weight: 500;
+
+}
+
+.titulo__habilidade {
+    font-size: 1.7rem;
+}
+
+.subtitulo__habilidade {
+    color: white;
+    font-size: 1rem;
+    font-style: italic;
+    font-weight: 400;
+    text-align: left;
+}
+
+.texto__habilidade {
+    font-size: 1.5rem;
+    font-style: italic;
+    font-weight: 500;
+}
+
+.carrousel {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+    object-fit: cover;
+}
+
+.botao__left__skin {
+    position: absolute;
+    width: 50px;
+    height: 55px;
+    cursor: pointer;
+    z-index: 1000;
+}
+
+.botao__right__skin {
+    position: absolute;
+    left: 96%;
+    width: 50px;
+    height: 55px;
+    cursor: pointer;
+    z-index: 1000;
+}
+
+.icon__left {
+    color: #664C1C;
+    height: 55px;
+    width: 50px;
+}
+
+.icon__right {
+    color: #664C1C;
+    height: 55px;
+    width: 50px;
+}
+
+.container__skins {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+}
+
+.image__skin {
+    opacity: 0;
+    position: absolute;
+    top: 5%;
+    left: 7%;
+    height: 90%;
+    width: 85%;
+}
+
+.selected {
+    opacity: 1;
+    position: absolute;
+    top: 15%;
+    left: 10%;
+    height: 80%;
+    width: 79%;
+}
+
+.moldura__skin {
+    float: left;
+    top: 20%;
+    left: 0%;
+    position: absolute;
+    height: 70%;
+    width: 100%;
+    transform: scale(1.1);
+}
+
+.icone__champ__splash {
+    height: 65px;
+    width: 65px;
+}
+
+.ancora__champ__splash {
+    position: relative;
+    top: -30%;
+    height: 80px;
+    width: 80px;
+    background-color: #15151BCC;
+    border-radius: 50%;
+    border: 1px solid #7B5710;
+    cursor: pointer;
+    display: grid;
+    align-content: center;
+    justify-content: center;
+}
+
+.titulo__pagina__skins {
+    position: absolute;
+    top: 5%;
+    left: 45%;
+    width: 10vw;
+    z-index: 1000;
+    display: flex;
+    gap: 10px;
+    align-items: center;
+}
+
+.titulo__paginas {
+    color: white;
+}
+
+.icon_skins_titulo {
+    height: 70px;
+    width: 70px;
+    border-radius: 50%;
+    background: rgba(21, 21, 27, 0.8);
+    border: 1px solid #7B5710;
+    display: grid;
+    align-content: center;
+    justify-content: center;
+}
+
+.icone__pagina__skins {
+    height: 50px;
+    width: 50px;
+}
+
+.container__skills__campeao {
+    display: flex;
+    width: 85%;
+    align-items: center;
+    justify-content: space-evenly;
+}
+
+.container__habilidades{
+    display: flex;
+    flex-direction: column-reverse;
+    gap: 30px;
+    width: 50px;
+    align-items: center;
+}
+
+.icone__interno {
+    z-index: 100;
+    width: 100%;
+}
+
+.titulo__pagina__habilidades {
+    position: absolute;
+    top: 15%;
+    left: 45%;
+    display: flex;
+    width: 15vw;
+    gap: 20px;
+    align-items: center;
+}
+
+.icone__pagina__habilidades {
+    height: 60px;
+    width: 60px;
+    background: rgba(21, 21, 27, 0.8);
+    border: 1px solid #7B5710;
+    border-radius: 50%;
+    padding: 10px;
+}
+
+.texto__pagina_habilidades {
+    font-size: 2rem;
+    font-weight: 700;
+    color: white;
 }
