--- a/css/classes.css
+++ b/css/classes.css
@@ -9,3 +9,37 @@
     align-items: center;
     justify-content: center;
 }
+
+@media(max-width: 400px) {
+
+    main {
+        width: 100vw;
+    }
+
+    #classes {
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: initial;
+        flex-direction: column;
+        gap: 5%;
+        width: 100%;
+        
+    }
+}
+
+@media(max-width: 600px) {
+
+    main {
+        width: 100vw;
+    }
+
+    #classes {
+        display: flex;
+        flex-wrap: initial;
+        justify-content: space-around;
+        flex-direction: column;
+        gap: 5%;
+        width: 100%;
+       
+    }
+}
