--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ main {
 }
 
 .titulo__campeoes h1 {
-    color: white;
+    color: #CFA75A;
 }
 
 .right__accessory {
@@ -77,10 +77,20 @@ main {
     top: 80%;
 }
 
-/* .teste {
-    background-color: #664C1C;
-    width: 60vw;
-    height: 60vh;
-    display: flex;
-} */
+@media(max-width: 400px) {
+    .container {
+        width: 80vw;
+    }
+} 
 
+@media(max-width: 600px) {
+    .container {
+        width: 80vw;
+    }
+}
+
+@media(max-width: 700px) {
+    .container {
+        width: 90vw;
+    }
+}
